--- a/style.css
+++ b/style.css
@@ -6,20 +6,20 @@ html, body {
 #camera, #camera-view, #camera-device, #photo-display {
     position: fixed;
     object-fit: contain;
-    height: auto;
-    width: auto;
+    height: 100%;
+    width: 100%;
 }
 
 #take-photo-button {
     position: fixed;
-    width: 30px;
-    height: auto;
+    bottom: 30px;
+    width: 100%;
 }
 
 #front-camera-button {
     position: fixed;
     bottom: 80px;
-    width: auto;
+    width: 100%;
 }
 
 .photo-taken {
